k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-app-backend-svc
  namespace: ecommerce-app
spec:
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: ecommerce-app-backend
