k8s/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: backend-ingress
 namespace: ecommerce-app
 annotations:
   #nginx.ingress.kubernetes.io/use-regex: "true"
   #nginx.ingress.kubernetes.io/rewrite-target: /$
spec:
 ingressClassName: nginx
 rules:
 - http:
     paths:
     - path: /api
       pathType: Prefix
       backend:
         service:
           name: ecommerce-app-backend-svc
           port:
             number: 80
